# schmidt-ai-coder

./: .gitignore  CHANGELOG.md
.changeset/: code-orchestrator-review-suggestions.md  config.json  feature-tracking-header.md  gemini-3-1-pro-default-model.md  initial-release.md  itchy-buckets-remain.md  promotion-cta-warning.md  update-promotion-warning-translations.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: marketplace-publish.yml
.husky/: pre-commit  pre-push
jetbrains/plugin/: turbo.json
launch/: README.md
mcp-servers/build_system/: README.md  main.py  pyproject.toml
mcp-servers/gdb/: README.md  main.py  mi.py  parsing.py  pyproject.toml  session.py
mcp-servers/gdb/tools/: __init__.py  (+9 more)
mcp-servers/linter/: README.md  main.py  pyproject.toml
mcp-servers/mcu-specs/: README.md  main.py  pyproject.toml
mcp-servers/mcu-specs/mcu_specs/: __init__.py  config.py  models.py  server.py
mcp-servers/mcu-specs/mcu_specs/embedding/: __init__.py  client.py
mcp-servers/mcu-specs/mcu_specs/ingestion/: __init__.py  chunker.py  pdf_parser.py
mcp-servers/mcu-specs/mcu_specs/storage/: __init__.py  qdrant_store.py
mcp-servers/mcu-specs/scripts/: ingest_all.py
mcp-servers/svd/: README.md  pyproject.toml
mcp-servers/svd/mcp_cmsis_svd/: __init__.py  formatters.py  model.py  server.py  svd_store.py
mcp-servers/svd/tests/: test_svd_store.py
mcp-servers/svd/tests/fixtures/: minimal.svd
mcp-servers/utils/: README.md  main.py  pyproject.toml
mcp-servers/valgrind/: README.md  main.py  pyproject.toml
plans/: mcu-specs-mcp-server.md
src/: .vscodeignore  esbuild.mjs  extension.ts  package.json
(+33 files in other folders)
