[project]
name = "mcu-specs"
version = "0.1.0"
description = "MCU Specs MCP Server - Spec search engine for microcontroller datasheets"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0.0",
    "qdrant-client>=1.7.0",
    "pdfplumber>=0.10.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
mcu-specs = "mcu_specs.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcu_specs"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
