[project]
name = "mcp-cmsis-svd"
version = "0.1.0"
description = "CMSIS-SVD MCP Server for embedded debugging"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0.0",
    "cmsis-svd>=0.4",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
mcp-cmsis-svd = "mcp_cmsis_svd.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_cmsis_svd"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
